--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,14 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
-druid = "0.8.3"
 thiserror = "1.0.63"
+druid = "0.8.3"
+env_logger = "0.11"
+log = "0.4"
+dotenvy = "0.15"
 
-druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
+[[example]]
+name = "color_picker"
 
-[patch.'https://github.com/linebender/druid'.druid]
-git = "https://github.com/linebender/druid"
-rev = "<copy the current druid rev from this repository's Cargo.toml>"
+[[example]]
+name = "color_picker_tutor"
